--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "dependencies": {
     "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^2.0.0",
+    "@astrojs/tailwind": "^3.1.2",
     "@notionhq/client": "^2.2.3",
     "@supercharge/promise-pool": "^2.3.2",
-    "astro": "^2.0.10",
+    "astro": "^2.3.3",
     "katex": "^0.16.4",
     "mermaid": "^9.3.0",
     "metascraper": "^5.33.4",
@@ -31,7 +32,8 @@
     "node-fetch": "^3.3.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@nrwl/nx-cloud": "^15.0.2",
